compiler/tests/fail/stack_allocation/x86-64/merge_too_large_global.jazz
u64[2] g = {1, 2};

export fn main () -> reg u64 {
  stack u64[3] s;
  reg u64 res;

  s[0:2] = g;
  res = s[0];

  return res;
}
